syntax = "proto3";
package remes.remes.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "remes/x/remes/types";

// GenesisVaultEntry represents a trap job entry in the genesis vault
// Used for Proof of Reuse + Ghost Jobs system (Tolerant Verification)
message GenesisVaultEntry {
  option (amino.name) = "remes/x/remes/GenesisVaultEntry";
  option (gogoproto.equal) = true;

  // entry_id is the unique identifier for this vault entry
  uint64 entry_id = 1;

  // data_hash is the IPFS hash of input data (chunk data)
  string data_hash = 2;

  // expected_gradient_hash is the SHA256 hash of the expected gradient (for exact match verification)
  string expected_gradient_hash = 3;

  // expected_gradient_ipfs_hash is the IPFS hash of the expected gradient tensor
  string expected_gradient_ipfs_hash = 4;

  // expected_fingerprint is a JSON string containing Top-K fingerprint with indices and values
  // Format: {"top_k": 100, "indices": [5, 100, 999, ...], "values": [0.9, 0.5, 0.3, ...], "shape": [128, 128]}
  // Both indices and values are REQUIRED for cosine similarity calculation using masking method
  string expected_fingerprint = 5;

  // gpu_architecture is the GPU architecture that solved this correctly (e.g., "Ampere", "Ada")
  string gpu_architecture = 6;

  // created_height is the block height when this entry was created
  int64 created_height = 7;

  // usage_count is how many times this entry has been used as a trap
  uint64 usage_count = 8;

  // last_used_height is the block height when this entry was last used
  int64 last_used_height = 9;

  // encrypted indicates if this vault entry is encrypted
  bool encrypted = 10;
}

